welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:5: error: 'case' expected but '(' found.
	(a,b) if((a>=40 && a<=60) && b==false) => return true
        ^cigarParty:6: error: '}' expected but ';' found.
	(a,b) if((a>=40) && b==true)           =>return true
^cigarParty:6: error: ';' expected but 'if' found.
	(a,b) if((a>=40) && b==true)           =>return true
              ^cigarParty:11: error: eof expected but '}' found.
 }
 ^