welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean =
{
(cigars,isWeekend) match
{
	(a,b) if((a>=40 && a<=60) && b==false) => return true
	(a,b) if((a>=40) && b==true)           =>return true
	(_,_) => return false
	
}
}